[package]
name = "cargo-extensions"
version = "0.2.1"
edition = "2024"
description = "cargo extensions"
license = "MIT"

[[bin]]
name = "cargo-features"
path = "src/bin/features.rs"

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.0"
clap = { version = "^4.5.49", features = ["derive"] }
colored = "3.0.0"
inquire = "0.9.1"
nucleo-matcher = "0.3.1"
toml_edit = "0.23.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
