[package]
name = "cargo-features"
version = "0.1.0"
edition = "2024"
description = "cargo features"
license = "MIT"

[dependencies]
cargo_metadata = "0.23.0"
clap = { version = "^4.5.49", features = ["color", "derive"] }
color-eyre = "0.6.5"
colored = "3.0.0"
inquire = "0.9.1"
nucleo-matcher = "0.3.1"
toml_edit = "0.23.7"
